--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "wavesurfer.js": "^4.4.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
