--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node src//bin/www.js",
     "dev": "npm run dev",
     "db:reset": "node ./db/reset.js"
   },
