--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "morgan": "~1.9.1",
     "pg": "^8.5.1",
     "pg-native": "^3.0.0"
