--- a/server/.editorconfig
+++ b/server/.editorconfig
@@ -1,3 +1,6 @@
+# EditorConfig helps developers define and maintain
+# consistent coding styles between different editors and IDEs.
+
 root = true
 [*]
 indent_style = space
